# agentcube

./: .dockerignore  .gitignore  .golangci.yml  AUDIT_FINDINGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.router  Makefile  OWNERS  PATH_HANDLING_AUDIT.md  PicoD-Design.md  QUICK_REFERENCE.md  README.md  TEST_TUNNEL_GUIDE.md  config.example.yaml  go.mod  go.sum  package-lock.json  proposalmd.md  pyproject.toml  pyrightconfig.json  x.diff
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
api-spec/: sandbox-api-spec.yaml
cmd/: OWNERS
cmd/agentrun/: .gitignore  MVP_SUMMARY.md  QUICKSTART.md  README.md  demo.py  pyproject.toml  test_pack.py
cmd/agentrun/agentrun/: __init__.py
cmd/agentrun/agentrun/cli/: __init__.py  main.py
cmd/agentrun/agentrun/models/: pack_models.py
cmd/agentrun/agentrun/operations/: __init__.py
cmd/agentrun/agentrun/runtime/: __init__.py  build_runtime.py  invoke_runtime.py  pack_runtime.py  publish_runtime.py  status_runtime.py
cmd/agentrun/agentrun/services/: __init__.py  agentcube_provider.py  agentcube_service.py  docker_service.py  k8s_provider.py  metadata_service.py
cmd/agentrun/examples/hello-agent/: Dockerfile  agent_metadata.yaml  main.py  requirements.txt
cmd/agentrun/examples/math-agent/: main.py  requirements.txt
cmd/cli/: MANIFEST.in  README.md  pyproject.toml
cmd/cli/agentcube/: __init__.py
cmd/cli/agentcube/cli/: __init__.py  apikey_commands.py  main.py
cmd/cli/agentcube/models/: __init__.py  apikey_models.py  pack_models.py
cmd/cli/agentcube/operations/: __init__.py
cmd/cli/agentcube/runtime/: __init__.py  apikey_runtime.py  build_runtime.py  invoke_runtime.py  pack_runtime.py  publish_runtime.py  status_runtime.py
cmd/cli/agentcube/services/: __init__.py  agentcube_provider.py  docker_service.py  k8s_provider.py  metadata_service.py
cmd/cli/examples/hello-agent/: main.py  requirements.txt
cmd/cli/examples/math-agent/: main.py
cmd/cli/tests/: conftest.py  test_build_runtime.py  test_cli_publish.py  test_env_support.py  test_packaging.py
cmd/cli/tests/cli/: test_apikey_create.py  test_apikey_list.py  test_apikey_revoke.py  test_apikey_wired_into_main.py
cmd/cli/tests/integration/: conftest.py  test_bootstrap.py  test_create_rollback.py  test_create_writes_both.py  test_list_join.py  test_namespace_missing.py  test_revoke_flips_secret.py  test_revoke_idempotent.py
cmd/cli/tests/unit/: test_apikey_models.py  test_hashing.py  test_k8s_provider_bootstrap.py  test_k8s_provider_namespace.py  test_k8s_provider_patch.py  test_key_generation.py  test_metadata_codec.py  test_namespace_resolution.py  test_prefix_match.py  test_validation.py
crds/: _.yaml  codeinterpreter.yaml  runtime.agentcube.io_codeinterpreters.yaml  runtime.agentcube.volcano.sh_codeinterpreters.yaml
docker/: Dockerfile  Dockerfile.mcp  Dockerfile.picod  Dockerfile.router  Dockerfile.workloadmanager  OWNERS
docs/: CHANGELOG-auth.md  IMPLEMENTATION_SUMMARY.md  OWNERS  PICOD_GUIDE.md  authentication.md  getting-started.md  quick-reference.md
example/: OWNERS  README.md  client.go  go.mod  go.sum  picod_client.go
examples/: test-auth.sh
hack/: boilerplate.go.txt  boilerplate.py.txt  check-coverage.sh  generate-charts.sh  go-toolchain.py  setup-kind-cluster.sh  setup-local-env.sh  update-codegen.sh  update-copyright.sh
integrations/code-interpreter-mcp/: Dockerfile  README.md  deployment.yaml  pyproject.toml
integrations/code-interpreter-mcp/agentcube_code_interpreter_mcp/: __init__.py  __main__.py  server.py
integrations/langchain-agentcube/: README.md  code-interpreter.yaml  pyproject.toml
integrations/langchain-agentcube/example/: deep_agent_sandbox.py
integrations/langchain-agentcube/langchain_agentcube/: __init__.py  sandbox.py
k8s/: agentcube-apiserver.yaml  agentcube-router.yaml  codeinterpreter-example.yaml  codeinterpreter-rbac.yaml  pico-apiserver.yaml  workloadmanager.yaml
kmetis-sdk-python/: __init__.py  config.py  constants.py  example.py  exceptions.py  pyproject.toml  sandbox.py  ssh_manager.py
kmetis-sdk-python/models/: pod_templates.py  sandbox_info.py
kmetis-sdk-python/providers/kubernetes/: client.py  lifecycle.py
kmetis-sdk-python/providers/ssh/: client.py  process.py
kmetis-sdk-python/services/: exceptions.py  log.py  resource_tracker.py
manifests/: OWNERS
pkg/: OWNERS
scripts/: get-token.sh  install-kuasar-vmm.sh  test_apiserver.sh  uninstall-kuasar-vmm.sh
sdk/: DESIGN.md  QUICK_REFERENCE.md  SESSIONS_IMPLEMENTATION.md  (+4 more)
sdk-python/: DESIGN.md  MANIFEST.in  OWNERS  README.md  pyproject.toml  requirements.txt
sdk-python/agentcube/: __init__.py  agent_runtime.py  async_agent_runtime.py  async_code_interpreter.py  auth.py  code_interpreter.py  exceptions.py  mcp_server.py  sandbox.py
sdk-python/agentcube/clients/: __init__.py  agent_runtime_data_plane.py  async_agent_runtime_data_plane.py  async_code_interpreter_data_plane.py  async_control_plane.py  client.py  code_interpreter_data_plane.py  constants.py  control_plane.py  data_plane.py  picod_client.py  ssh_client.py
sdk-python/agentcube/integrations/: __init__.py  langchain.py
sdk-python/agentcube/integrations/langchain/: README.md  __init__.py  sandbox.py
sdk-python/agentcube/utils/: __init__.py  async_http.py  exceptions.py  http.py  log.py  utils.py
sdk-python/examples/: README.md  agent_runtime_usage.py  async_agent_runtime_usage.py  async_basic_usage.py  basic_usage.py  examples.py  picod_example.py  refactoring_examples.py  test_langchain_sandbox.py
sdk-python/examples/mcp/: README.md  claude_desktop_config.example.json  start_mcp_cursor.sh
sdk-python/scripts/: e2e_picod_test.py
sdk-python/tests/: e2e_picod_test.py  test_agent_runtime.py  test_async_agent_runtime.py  test_async_code_interpreter.py  test_auth.py  test_client.py  test_code_interpreter.py  test_langchain_e2e.py  test_langchain_integration.py  test_langchain_standard.py  test_mcp_server.py  test_sandbox_refactoring.py  test_sdk_full.py  test_ssh_client.py
sdk-python/tests/clients/: test_ssh_client.py
(+463 files in other folders)
