name = "k8s-sandbox-sdk"
version = "0.1.0"
description = "Python SDK for managing Kubernetes sandboxes"
author = "Your Name"
author_email = "your.email@example.com"

[dependencies]
kubernetes = "^27.2.0"
paramiko = "^3.4.0"
python-dotenv = "^1.0.0"

[dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["setuptools", "wheel"]