[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcube-sdk"
version = "0.1.0"
description = "Python SDK for AgentCube Code Interpreter"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "requests",
    "PyJWT>=2.0.0",
    "cryptography"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcube*"]
namespaces = false
