[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcube-cli"
version = "0.1.0"
description = "AgentCube CLI - A developer tool for packaging, building, and deploying AI agents to AgentCube"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["ai", "agent", "kubernetes", "volcano", "agentcube", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
requires-python = ">=3.10"

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "docker>=6.0.0",
    "rich>=13.0.0",
    "packaging>=23.0",
    "importlib-resources>=6.0.0",
    "semver>=3.0.0",
]

[project.optional-dependencies]
k8s = [
    "kubernetes>=28.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "kubernetes>=28.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx-mock>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/volcano-sh/agentcube"
Documentation = "https://agentcube.readthedocs.io/"
Repository = "https://github.com/volcano-sh/agentcube/tree/main/cmd/cli"
Issues = "https://github.com/volcano-sh/agentcube/issues"

[project.scripts]
kubectl-agentcube = "agentcube.cli.main:app"

[tool.setuptools]
packages = ["agentcube", "agentcube.cli", "agentcube.runtime", "agentcube.operations", "agentcube.services"]