# Copyright The Volcano Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentcube"
version = "0.1.0"
description = "LangChain Deep Agents sandbox backend for AgentCube Code Interpreter"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.0,<0.6",
    "agentcube-sdk>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_agentcube*"]
